--- a/daq/slc/apps/cprcontrold/tools/Makefile
+++ b/daq/slc/apps/cprcontrold/tools/Makefile
@@ -17,12 +17,15 @@ LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 LIBS    += -lm -lpthread -ldl -lrt
 LIBS    += -L$(BELLE2_LIB) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database\
  -ldaq_slc_nsm -ldaq_slc_runcontrol -ldaq_slc_readout -ldaq_slc_copper \
- -ldaq_slc_apps_cprcontrold -lhs -lttrx
+ -ldaq_slc_apps_cprcontrold -lhs -lttrx -ldaq_slc_pyb2daq
+LIBS    += -lnsm2_corelib -lnsm2_b2lib
+LIBS   += -L$(BELLE2_DAQ_SLC)/externals/boost/lib -lboost_python -lboost_filesystem -lboost_program_options -lboost_system
+LIBS   += -L$(BELLE2_DAQ_SLC)/externals/python/lib -lpython3.5m
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
 
 CFLAGS   = -g -Wall -fPIC -D_REENTRANT
 CFLAGS  += -I$(BELLE2_DAQ_SLC)/include -I.
-CFLAGS  += -I$(BELLE2_INC)
+CFLAGS  += -I$(BELLE2_INC) -I$(BELLE2_DAQ_SLC)/externals/python/include/python3.5m -I$(BELLE2_DAQ_SLC)/externals/boost/include
 
 MAINS   = $(wildcard *.cc)
 TARGETS = $(MAINS:%.cc=$(BINDIR)/%)
