--- a/display/modules/display/SConscript
+++ b/display/modules/display/SConscript
@@ -1,10 +1,10 @@
 Import('env')
 
-env['LIBS'] = ['$ROOT_LIBS', 'display', 'framework', 'geometry',
+env['LIBS'] = ['$ROOT_LIBS', 'display', 'framework',
                'tracking', 'vxd',
                'bklm_dataobjects', 'mdst_dataobjects', 'eklm_dataobjects',
                'pxd_dataobjects', 'svd_dataobjects', 'cdc_dataobjects',
                'simulation_dataobjects', 'tracking_dataobjects', 'arich_dataobjects',
-               'genfit2']
+               'top_dataobjects', 'genfit2']
 
 Return('env')
