--- a/bklm/modules/bklmSimHistogrammer/SConscript
+++ b/bklm/modules/bklmSimHistogrammer/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'bklm', 'eklm', 'bklm_dataobjects', 'simulation_dataobjects','mdst_dataobjects',
+env['LIBS'] = ['framework', 'bklm_dataobjects', 'mdst_dataobjects',
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
 Return('env')
