Add 'topcaf' in SConscript to allow using new DB interface
dbobjects for using new DB interface.

--- a/topcaf/modules/PedestalModule/SConscript
+++ b/topcaf/modules/PedestalModule/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework','topcaf_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework','topcaf_dataobjects','topcaf', '$ROOT_LIBS']
 
 Return('env')
