--- a/daq/slc/data/config/svdpv.conf
+++ b/daq/slc/data/config/svdpv.conf
@@ -2,7 +2,9 @@
 # NSM configuration
 #
 
-nsm.nodename       : CA2NSM
+nsm.host           : belle-rpc1
+nsm.port           : 8127
+nsm.nodename       : SVDPV
 
 #
 #
