--- a/daq/slc/extra/epics/ca2nsm/ca2nsmApp/Makefile
+++ b/daq/slc/extra/epics/ca2nsm/ca2nsmApp/Makefile
@@ -8,7 +8,7 @@ include $(TOP)/configure/CONFIG
 PROD_HOST += ca2nsm
 ca2nsm_SRCS += CA2NSMCallback.cpp
 ca2nsm_SRCS += ca2nsm_callback.cpp
-ca2nsm_SRCS += ca2nsm.c
+ca2nsm_SRCS += ca2nsm.cpp
 ca2nsm_LIBS += $(EPICS_BASE_HOST_LIBS) 
 
 daq_slc_base_DIR = $(BELLE2_DAQ_SLC)/lib
