--- a/analysis/modules/FSRCorrection/SConscript
+++ b/analysis/modules/FSRCorrection/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'analysis', 'analysis_dataobjects', 'analysis_DecayDescriptor', 'mdst_dataobjects']
+env['LIBS'] = ['framework', 'analysis', 'analysis_dataobjects', 'analysis_DecayDescriptor']
 Return('env')
 
