--- a/top/modules/TOPTimeBaseCalibrator/SConscript
+++ b/top/modules/TOPTimeBaseCalibrator/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'top_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'top', 'top_dataobjects', '$ROOT_LIBS']
 
 Return('env')
