use release or build tags instead of commit if possible

--- a/framework/io/SConscript
+++ b/framework/io/SConscript
@@ -47,16 +47,32 @@ for var in release_dir_vars:
         if len(changes) != 0:
             modifications = True
 
-        # get hash for release_version (if set)
-        if release_commit is not None or release_version == 'HEAD':
-            continue
-        proc = subprocess.Popen(['git', '-C', reldir, 'rev-parse', release_version], stdout=subprocess.PIPE, stderr=devnull)
-        release_commit = proc.communicate()[0].strip()
-        if proc.returncode != 0 or len(release_commit) != 40:
-            # unsure why this would fail, but whatever
-            release_commit = None
-        elif release_commit == head_commitid[var]:
-            head_commitid[var] = release_version
+        if release_commit is None and release_version != 'HEAD':
+            # get hash for release_version
+            proc = subprocess.Popen(['git', '-C', reldir, 'rev-parse', release_version], stdout=subprocess.PIPE, stderr=devnull)
+            release_commit = proc.communicate()[0].strip()
+            if proc.returncode != 0 or len(release_commit) != 40:
+                # unsure why this would fail, but whatever
+                release_commit = None
+            elif release_commit == head_commitid[var]:
+                head_commitid[var] = release_version
+            else:
+                # release and HEAD don't match
+                release_commit = None
+
+        if release_commit is None:
+            # get tag for current commit
+            proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'release*'], stdout=subprocess.PIPE, stderr=devnull)
+            release_version = proc.communicate()[0].strip()
+            if proc.returncode != 0:  # try build tag instead
+                proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'build*'], stdout=subprocess.PIPE, stderr=devnull)
+                release_version = proc.communicate()[0].strip()
+                if proc.returncode != 0:
+                    release_version = 'HEAD'
+
+            if release_version != 'HEAD':
+                release_commit = head_commitid[var]
+                head_commitid[var] = release_version
 
 if identifier is None:
     if len(head_commitid) == 2:
@@ -64,10 +80,11 @@ if identifier is None:
             identifier = head_commitid['BELLE2_RELEASE_DIR'] + '+' + head_commitid['BELLE2_LOCAL_DIR']
         else:
             identifier = head_commitid['BELLE2_RELEASE_DIR']
-    elif 'BELLE2_RELEASE_DIR' in head_commitid:
-        identifier = head_commitid['BELLE2_RELEASE_DIR']
     elif 'BELLE2_LOCAL_DIR' in head_commitid:
         identifier = head_commitid['BELLE2_LOCAL_DIR']
+    elif 'BELLE2_RELEASE_DIR' in head_commitid:
+        # compilation only happens in local dir, so this normally never happens.
+        identifier = head_commitid['BELLE2_RELEASE_DIR']
     else:
         print('both central & local dir seem not to be git repositories, but we failed to detect this earlier. Please report this.')
         identifier = ''
