Refactoring of version determination: Always check for release/build tag Use .release if not a git repository

--- a/framework/io/SConscript
+++ b/framework/io/SConscript
@@ -9,20 +9,9 @@ env['LIBS'] = ['framework', '$ROOT_LIBS']
 import subprocess
 import os
 
-# combined commit ID
-identifier = None
 # local modifications?
 modifications = False
 
-# find out what we think the release is
-release_version = 'HEAD'
-release_commit = None
-if 'BELLE2_RELEASE' in os.environ:
-    release_version = os.environ['BELLE2_RELEASE']
-if release_version.lower() == 'head':
-    release_version = 'HEAD'
-
-# check .git to confirm
 head_commitid = dict()
 release_dir_vars = ['BELLE2_LOCAL_DIR', 'BELLE2_RELEASE_DIR']
 for var in release_dir_vars:
@@ -34,12 +23,16 @@ for var in release_dir_vars:
         head_commitid[var] = proc.communicate()[0].strip()
         if proc.returncode != 0 or len(head_commitid[var]) != 40:
             # release dir is set, but we couldn't get a commit id -> not tracked
-            # shouldn't happen for local dirs, but is OK for central (we'll use release_version there)
-            if var == 'BELLE2_LOCAL_DIR' or release_version == 'HEAD':
-                identifier = ""
-            else:
-                head_commitid[var] = release_version
-            continue
+            # shouldn't happen for local dirs, but is OK for central (we'll use .release content)
+            try:
+                head_commitid[var] = open(os.path.join(reldir, '.release')).readline().strip()
+            except:
+                if 'BELLE2_RELEASE' in os.environ:
+                   head_commitid[var] = os.environ['BELLE2_RELEASE']
+                else:
+                   head_commitid[var] = reldir
+            if head_commitid[var].lower() == 'head':
+                head_commitid[var] = ''
 
         # check for modifications, ignoring untracked files
         proc = subprocess.Popen(['git', '-C', reldir, 'status', '-uno', '--porcelain'], stdout=subprocess.PIPE, stderr=devnull)
@@ -47,47 +40,33 @@ for var in release_dir_vars:
         if len(changes) != 0:
             modifications = True
 
-        if release_commit is None and release_version != 'HEAD':
-            # get hash for release_version
-            proc = subprocess.Popen(['git', '-C', reldir, 'rev-parse', release_version], stdout=subprocess.PIPE, stderr=devnull)
-            release_commit = proc.communicate()[0].strip()
-            if proc.returncode != 0 or len(release_commit) != 40:
-                # unsure why this would fail, but whatever
-                release_commit = None
-            elif release_commit == head_commitid[var]:
-                head_commitid[var] = release_version
-            else:
-                # release and HEAD don't match
-                release_commit = None
-
-        if release_commit is None:
-            # get tag for current commit
-            proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'release*'], stdout=subprocess.PIPE, stderr=devnull)
+        # get tag for current commit and use it instead of the commit ID if it's a release or build
+        proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'release*'], stdout=subprocess.PIPE, stderr=devnull)
+        release_version = proc.communicate()[0].strip()
+        if proc.returncode != 0:  # try build tag instead
+            proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'build*'], stdout=subprocess.PIPE, stderr=devnull)
             release_version = proc.communicate()[0].strip()
-            if proc.returncode != 0:  # try build tag instead
-                proc = subprocess.Popen(['git', '-C', reldir, 'describe', '--exact', '--match', 'build*'], stdout=subprocess.PIPE, stderr=devnull)
-                release_version = proc.communicate()[0].strip()
-                if proc.returncode != 0:
-                    release_version = 'HEAD'
+            if proc.returncode != 0:
+                release_version = 'HEAD'
 
-            if release_version != 'HEAD':
-                release_commit = head_commitid[var]
-                head_commitid[var] = release_version
+        if release_version != 'HEAD':
+            head_commitid[var] = release_version
 
-if identifier is None:
-    if len(head_commitid) == 2:
-        if head_commitid['BELLE2_RELEASE_DIR'] != head_commitid['BELLE2_LOCAL_DIR']:
-            identifier = head_commitid['BELLE2_RELEASE_DIR'] + '+' + head_commitid['BELLE2_LOCAL_DIR']
-        else:
-            identifier = head_commitid['BELLE2_RELEASE_DIR']
-    elif 'BELLE2_LOCAL_DIR' in head_commitid:
-        identifier = head_commitid['BELLE2_LOCAL_DIR']
-    elif 'BELLE2_RELEASE_DIR' in head_commitid:
-        # compilation only happens in local dir, so this normally never happens.
-        identifier = head_commitid['BELLE2_RELEASE_DIR']
+# combined commit ID
+identifier = None
+if len(head_commitid) == 2:
+    if head_commitid['BELLE2_RELEASE_DIR'] != head_commitid['BELLE2_LOCAL_DIR']:
+        identifier = head_commitid['BELLE2_RELEASE_DIR'] + '+' + head_commitid['BELLE2_LOCAL_DIR']
     else:
-        print('both central & local dir seem not to be git repositories, but we failed to detect this earlier. Please report this.')
-        identifier = ''
+        identifier = head_commitid['BELLE2_RELEASE_DIR']
+elif 'BELLE2_LOCAL_DIR' in head_commitid:
+    identifier = head_commitid['BELLE2_LOCAL_DIR']
+elif 'BELLE2_RELEASE_DIR' in head_commitid:
+    # compilation only happens in local dir, so this normally never happens.
+    identifier = head_commitid['BELLE2_RELEASE_DIR']
+else:
+    print('both central & local dir seem not to be git repositories, but we failed to detect this earlier. Please report this.')
+    identifier = ''
 if identifier != '' and modifications:
     identifier += '-modified'
 
