Adding options to draw matching information of the mc and pr tracks.

--- a/tracking/trackFindingCDC/SConscript
+++ b/tracking/trackFindingCDC/SConscript
@@ -7,6 +7,7 @@ env.Dictionary()['SUBLIB'] = True
 
 # Additional libraries
 env['LIBS'] = [
+    'tracking',
     'tracking_dataobjects',
     'geometry',
     'cdc', 'cdc_dataobjects',
