--- a/trg/grl/SConscript
+++ b/trg/grl/SConscript
@@ -2,7 +2,7 @@ Import('env')
 
 # env['CONTINUE'] = False
 
-env['LIBS'] = ['framework']
+env['LIBS'] = ['framework', '$ROOT_LIBS']
 #env.Append(CPPDEFINES = {'TRG_DEBUG':None})
 #env.Append(CPPDEFINES = {'TRG_DISPLAY':None})
 #env.ParseConfig('pkg-config --cflags --libs gtkmm-2.4')
