--- a/site_scons/SConstruct
+++ b/site_scons/SConstruct
@@ -83,7 +83,7 @@ global_env = Environment(
     CXXFLAGS=['-std=c++11'],
     # disable warnings when compiling dictionaries, too much root problems
     # involved
-    ROOTCLING_EXTRA_CXXFLAGS=["-w"],
+    ROOTCLING_EXTRA_CCFLAGS=["-w"],
     CPPDEFINES={'_PACKAGE_': '\\"$PACKAGE\\"'},
     CPPPATH=['include'],
     LIBPATH=['$LIBDIR', '$EXTLIBDIR', os.path.join(os.environ['ROOTSYS'], 'lib')],
@@ -167,8 +167,8 @@ elif option == 'clang':
     global_env['CXX'] = 'clang++'
     # enable a few extra warnings warnings but disable the missing braces warning, because it can lead
     # to false positives in conjuction with std::array : https://llvm.org/bugs/show_bug.cgi?id=21629
-    global_env.Append(CCFLAGS=["-O2"],
-                      CXXFLAGS=["-Wdocumentation", "-Wheader-hygiene", "-Wno-missing-braces"])
+    global_env.Append(CCFLAGS=["-O2", "-Wno-missing-braces"],
+                      CXXFLAGS=["-Wdocumentation", "-Wheader-hygiene"])
     # make sure clang uses the correct paths to the gcc std c++ and not the
     # system ones. First we disable the default c++ include path
     global_env.Append(CXXFLAGS=["-nostdinc++"])
