--- a/site_scons/SConstruct
+++ b/site_scons/SConstruct
@@ -168,7 +168,7 @@ elif option == 'clang':
     # enable a few extra warnings warnings but disable the missing braces warning, because it can lead
     # to false positives in conjuction with std::array : https://llvm.org/bugs/show_bug.cgi?id=21629
     global_env.Append(CCFLAGS=["-O2", "-Wno-missing-braces"],
-                      CXXFLAGS=["-Wdocumentation", "-Wheader-hygiene"])
+                      CXXFLAGS=["-Wheader-hygiene"])
     # make sure clang uses the correct paths to the gcc std c++ and not the
     # system ones. First we disable the default c++ include path
     global_env.Append(CXXFLAGS=["-nostdinc++"])
