--- a/tracking/modules/cdcToVXDExtrapolator/SConscript
+++ b/tracking/modules/cdcToVXDExtrapolator/SConscript
@@ -11,7 +11,10 @@ env['LIBS'] = [
     'svd',
     'svd_dataobjects',
     'pxd_dataobjects',
-    'vxd_dataobjects'
+    'vxd_dataobjects',
+    'tracking_trackFindingCDC',
+    'tracking_dataobjects',
+    'tracking'
     ]
 Return('env')
 
