--- a/pxd/dataobjects/SConscript
+++ b/pxd/dataobjects/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'vxd_dataobjects']
+env['LIBS'] = ['framework','simulation_dataobjects', 'vxd_dataobjects']
 
 Return('env')
