--- a/pxd/modules/pxdBackground/SConscript
+++ b/pxd/modules/pxdBackground/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['vxd','vxd_dataobjects', 'pxd', 'pxd_dataobjects', 'framework', 
+env['LIBS'] = ['vxd','vxd_dataobjects', 'pxd_dataobjects', 'framework', 
   'simulation_dataobjects', 'mdst_dataobjects', 'background_dataobjects']
 
 Return('env')
