--- a/pxd/modules/pxdClusterShapeCalibration/SConscript
+++ b/pxd/modules/pxdClusterShapeCalibration/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'genfit2','calibration', 'calibration_dataobjects', 'vxd',  
+env['LIBS'] = ['framework', 'genfit2','calibration', 'calibration_dataobjects', 'vxd','vxd_dataobjects',  
 'pxd', 'pxd_dataobjects']
 
 Return('env')
