--- a/vxd/modules/vxdDQM/SConscript
+++ b/vxd/modules/vxdDQM/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['vxd', 'rawdata_dataobjects', 'pxd_dataobjects', 'svd_dataobjects', 'framework']
+env['LIBS'] = ['vxd', 'pxd_dataobjects', 'svd_dataobjects', 'framework']
 
 
 Return('env')
