--- a/svd/dataobjects/SConscript
+++ b/svd/dataobjects/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'vxd_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'simulation_dataobjects', 'vxd_dataobjects', '$ROOT_LIBS']
 
 Return('env')
