Fixed library dependencies in testbeam/vxd

--- a/testbeam/SConscript
+++ b/testbeam/SConscript
@@ -1,7 +1,7 @@
 Import('env')
 
 env['LIBS'] = ['$ROOT_LIBS', 'framework', 'geometry', 'simulation',
-    'mdst_dataobjects', 'geometry', 'vxd', 'vxd_dataobjects',
+    'simulation_dataobjects', 'mdst_dataobjects', 'geometry', 'vxd', 'vxd_dataobjects',
     'pxd_dataobjects', 'svd_dataobjects', 'testbeam_vxd_dataobjects', 
     'testbeam_top_dataobjects', 'tracking', 'pxd', 'svd', 'genfit2', 'alignment']
 
