--- a/testbeam/vxd/modules/tracking/SConscript
+++ b/testbeam/vxd/modules/tracking/SConscript
@@ -3,15 +3,14 @@ Import('env')
 env['LIBS'] = [
     'framework',
     'mdst_dataobjects',
-    'simulation_dataobjects',
     'pxd', 'pxd_dataobjects',
     'svd', 'svd_dataobjects',
     'vxd', 'vxd_dataobjects',
     'testbeam_vxd_dataobjects',
     'cdc', 'cdc_dataobjects',
     'genfit2',
-    'geometry', 'pxd', 'svd', 'testbeam',
-    'boost_chrono', 'geometry',
+    'pxd', 'svd', 'testbeam',
+    'boost_chrono', 
     'tracking', 'tracking_dataobjects',
     ]
 Return('env')
