--- a/testbeam/vxd/modules/DQM/SConscript
+++ b/testbeam/vxd/modules/DQM/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'vxd', 'vxd_dataobjects', 'testbeam_vxd_dataobjects', 'pxd', 'tracking', 'genfit2', 'pxd_dataobjects', 'svd', 'svd_dataobjects', 'testbeam']
+env['LIBS'] = ['framework', 'vxd', 'vxd_dataobjects', 'testbeam_vxd_dataobjects', 'pxd', 'tracking', 'genfit2', 'pxd_dataobjects', 'svd', 'svd_dataobjects']
 
 Return('env')
