Fixed testbeam/top library dependencies

--- a/testbeam/top/modules/TOPCRTFall2014Output/SConscript
+++ b/testbeam/top/modules/TOPCRTFall2014Output/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', 'top_dataobjects', 'top',
-               'testbeam_top_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'top_dataobjects', 'top', '$ROOT_LIBS'] 
 
 Return('env')
