--- a/testbeam/top/modules/TOPCRTEventBuilder/SConscript
+++ b/testbeam/top/modules/TOPCRTEventBuilder/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'rawdata_dataobjects', 'rawdata', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'rawdata_dataobjects', '$ROOT_LIBS']
 
 Return('env')
