--- a/testbeam/top/modules/TOPLeps2013Output/SConscript
+++ b/testbeam/top/modules/TOPLeps2013Output/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', 'top_dataobjects', 'top', 
+env['LIBS'] = ['framework', 'top_dataobjects', 'top', 
 	    '$ROOT_LIBS']
 
 Return('env')
