--- a/testbeam/top/modules/TOPRawdataInput/SConscript
+++ b/testbeam/top/modules/TOPRawdataInput/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'rawdata_dataobjects', 'top_dataobjects', 'rawdata',
-	    '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'rawdata_dataobjects', 'top_dataobjects', '$ROOT_LIBS']
 
 Return('env')
