--- a/daq/slc/data/config/dqm.conf
+++ b/daq/slc/data/config/dqm.conf
@@ -2,9 +2,9 @@
 # configuration for DQM
 #
 
-nsm.nodename       : DQMVIEW
-nsm.host           : belle-dqm.desy.de
-nsm.port           : 9122
+#nsm.nodename       : DQMVIEW
+#nsm.host           : belle-dqm.desy.de
+#nsm.port           : 9122
 
 #
 #
@@ -17,10 +17,11 @@ dqm.rootdir       : #/home/tkonno/log
 dqm.tmapdir       : #/tmp
 dqm.ntmap         : 2
 
-dqm[0].name       : HLT
-dqm[0].file       : dqmhisto
-dqm[1].name       : ERECO
-dqm[1].file       : dqmhisto_reco
+hist.port         : 9991
+#dqm[0].name       : HLT
+#dqm[0].file       : dqmhisto
+#dqm[1].name       : ERECO
+#dqm[1].file       : dqmhisto_reco
 #dqm[0].name       : ERECO
 #dqm[0].file       : dqmhisto_reco
 
