--- a/top/modules/TOPChannelMasker/SConscript
+++ b/top/modules/TOPChannelMasker/SConscript
@@ -1,3 +1,3 @@
 Import('env')
-env['LIBS'] = ['framework', '$ROOT_LIBS', 'top_reconstruction']
+env['LIBS'] = ['framework', '$ROOT_LIBS', 'top', 'top_dataobjects', 'top_reconstruction']
 Return('env')
