--- a/daq/slc/apps/ecldspd/Makefile
+++ b/daq/slc/apps/ecldspd/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/ecldspd
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ecldspd/include/* $(INCDIR)/apps/ecldspd
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/ecldspd/include/* $(INCDIR)/apps/ecldspd
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ecldspd/include/* $(INCDIR)/apps/ecldspd
 
 apps/ecldspd: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
