--- a/daq/slc/apps/ttdad/Makefile
+++ b/daq/slc/apps/ttdad/Makefile
@@ -1,11 +1,12 @@
 all: copyinc apps/ttdad
 
-INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
+INCDIR=../../include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/ttdad
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ttdad/include/* $(INCDIR)/apps/ttdad
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/ttdad/include/* $(INCDIR)/apps/ttdad/
+#	@ install -m 644 -p ../../apps/ttdad/include/* $(INCDIR)/apps/ttdad
 
 apps/ttdad: %:
-	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@ 
+	@ make -C ../.. -f Makefile.src TARGET=$@
 	@ if [ -f ./tools/Makefile ]; then make -C ./tools; fi
