--- a/daq/slc/apps/cprcontrold/Makefile
+++ b/daq/slc/apps/cprcontrold/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/cprcontrold
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/cprcontrold/include/* $(INCDIR)/apps/cprcontrold
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/cprcontrold/include/* $(INCDIR)/apps/cprcontrold
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/cprcontrold/include/* $(INCDIR)/apps/cprcontrold
 
 apps/cprcontrold: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
