--- a/daq/slc/apps/filemond/Makefile
+++ b/daq/slc/apps/filemond/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/filemond
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/filemond/include/* $(INCDIR)/apps/filemond
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/filemond/include/* $(INCDIR)/apps/filemond
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/filemond/include/* $(INCDIR)/apps/filemond
 
 apps/filemond: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
