--- a/daq/slc/apps/hltscriptd/Makefile
+++ b/daq/slc/apps/hltscriptd/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/hltscriptd
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/hltscriptd/include/* $(INCDIR)/apps/hltscriptd
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/hltscriptd/include/* $(INCDIR)/apps/hltscriptd
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/hltscriptd/include/* $(INCDIR)/apps/hltscriptd
 
 apps/hltscriptd: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
