--- a/daq/slc/apps/logreaderd/Makefile
+++ b/daq/slc/apps/logreaderd/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/logreaderd
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/logreaderd/include/* $(INCDIR)/apps/logreaderd
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/logreaderd/include/* $(INCDIR)/apps/logreaderd/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/logreaderd/include/* $(INCDIR)/apps/logreaderd
 
 apps/logreaderd: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
