--- a/daq/slc/apps/logtestd/Makefile
+++ b/daq/slc/apps/logtestd/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/logtestd
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/logtestd/include/* $(INCDIR)/apps/logtestd
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/logtestd/include/* $(INCDIR)/apps/logtestd/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/logtestd/include/* $(INCDIR)/apps/logtestd
 
 apps/logtestd: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
