--- a/daq/slc/apps/mwreaderd/Makefile
+++ b/daq/slc/apps/mwreaderd/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/mwreaderd
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/mwreaderd/include/* $(INCDIR)/apps/mwreaderd
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/mwreaderd/include/* $(INCDIR)/apps/mwreaderd/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/mwreaderd/include/* $(INCDIR)/apps/mwreaderd
 
 apps/mwreaderd: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
