--- a/daq/slc/apps/nsmtemplated/Makefile
+++ b/daq/slc/apps/nsmtemplated/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/nsmtemplated
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/nsmtemplated/include/* $(INCDIR)/apps/nsmtemplated
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/nsmtemplated/include/* $(INCDIR)/apps/nsmtemplated/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/nsmtemplated/include/* $(INCDIR)/apps/nsmtemplated
 
 apps/nsmtemplated: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
