--- a/daq/slc/apps/rctemplated/Makefile
+++ b/daq/slc/apps/rctemplated/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/rctemplated
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/rctemplated/include/* $(INCDIR)/apps/rctemplated
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/rctemplated/include/* $(INCDIR)/apps/rctemplated/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/rctemplated/include/* $(INCDIR)/apps/rctemplated
 
 apps/rctemplated: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
