--- a/daq/slc/apps/rocontrold/Makefile
+++ b/daq/slc/apps/rocontrold/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/rocontrold
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/rocontrold/include/* $(INCDIR)/apps/rocontrold
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/rocontrold/include/* $(INCDIR)/apps/rocontrold/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/rocontrold/include/* $(INCDIR)/apps/rocontrold
 
 apps/rocontrold: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
