--- a/daq/slc/apps/socketmonitord/Makefile
+++ b/daq/slc/apps/socketmonitord/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/socketmonitord
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/socketmonitord/include/* $(INCDIR)/apps/socketmonitord
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/socketmonitord/include/* $(INCDIR)/apps/socketmonitord/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/socketmonitord/include/* $(INCDIR)/apps/socketmonitord
 
 apps/socketmonitord: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@
