--- a/daq/slc/apps/ttctrld/Makefile
+++ b/daq/slc/apps/ttctrld/Makefile
@@ -4,7 +4,8 @@ INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
 	@ mkdir -p $(INCDIR)/apps/ttctrld
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ttctrld/include/* $(INCDIR)/apps/ttctrld
+	@ ln -s $(BELLE2_DAQ_SLC)/apps/ttctrld/include/* $(INCDIR)/apps/ttctrld/
+#	@ install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ttctrld/include/* $(INCDIR)/apps/ttctrld
 
 apps/ttctrld: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@ 
