--- a/ecl/SConscript
+++ b/ecl/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'geometry', 'ecl_dbobjects', 'simulation','ecl_dataobjects', 'mdst_dataobjects',
-               'simulation_dataobjects', '$ROOT_LIBS', 'Geom', 'calibration', 'analysis']
+               'simulation_dataobjects', 'Geom', 'calibration', 'calibration_dataobjects', '$ROOT_LIBS']
 
 Return('env')
