--- a/alignment/SConscript
+++ b/alignment/SConscript
@@ -14,6 +14,7 @@ if testbeam:
 env['LIBS'] = ['framework', 'cdc_dataobjects',
                'genfit2', '$ROOT_LIBS', 'EG', 'svd', 'pxd',
                'alignment_dataobjects', 'bklm', 'calibration', 'calibration_dataobjects',
-               'eklm_dataobjects', 'eklm_dbobjects', 'eklm']
+               'eklm_dataobjects', 'eklm_dbobjects', 'eklm',
+               'alignment_dbobjects']
 Return('env')
 
