--- a/alignment/dbobjects/SConscript
+++ b/alignment/dbobjects/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', '$ROOT_LIBS', 'calibration']
+env['LIBS'] = ['$ROOT_LIBS', 'calibration']
 env['SUBLIB'] = True
 
 Return('env')
