add option to train on RecoTracks instead of MCParticles

--- a/trg/cdc/modules/neurotrigger/SConscript
+++ b/trg/cdc/modules/neurotrigger/SConscript
@@ -2,6 +2,7 @@ Import('env')
 
 env['LIBS'] = ['framework',
                'mdst_dataobjects',
+               'tracking_dataobjects',
                'cdc',
                'cdc_dataobjects',
                'trg_cdc',
