--- a/daq/expreco/tools/SConscript
+++ b/daq/expreco/tools/SConscript
@@ -1,5 +1,7 @@
 Import('env')
 
 env['TOOLS_LIBS']['ereco_eventserver'] = ['daq', 'framework', '$ROOT_LIBS' ]
+env['TOOLS_LIBS']['ereco_distributor'] = ['daq', 'framework', '$ROOT_LIBS' ]
+env['TOOLS_LIBS']['ereco_master_local'] = ['daq', 'framework', '$ROOT_LIBS' ]
 
 Return('env')
