Updated Python interface

--- a/daq/dqm/analysis/modules/SConscript
+++ b/daq/dqm/analysis/modules/SConscript
@@ -1,5 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'daq']
+#env['LIBS'] = ['framework', 'daq', "RHTTP", "ca", "RooFit", "RooFitCore"]
+env['LIBS'] = ['framework', 'daq', "RHTTP", "RooFit", "RooFitCore"]
 
 Return('env')
