Remove unneeded libraries
the libraries pq, z, termcap and readline used to be needed to link
against belle_legacy but we fixed belle_legacy some time ago to

 - link against pq and z correctly
 - remove dependency for termcap and readline

Apparently I forgot to fix b2bii after that change. So here goes. Also
remove stdc++ from tools: it's automatically added by the compiler if
compiling c++ code.

--- a/b2bii/SConscript
+++ b/b2bii/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['belle_legacy', 'pq', 'readline', 'termcap', 'z']
+env['LIBS'] = ['belle_legacy']
 env['CONTINUE'] = True
 
 Return('env')
