--- a/b2bii/tools/SConscript
+++ b/b2bii/tools/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['TOOLS_LIBS']['numberOfEventsInBelleMdst'] = ['stdc++', 'framework', 'boost_program_options', 'belle_legacy', 'pq', 'readline', 'termcap', 'z', 'b2bii']
-env['TOOLS_LIBS']['numberOfEventsInBelle2Mdst'] = ['stdc++', 'framework', 'boost_program_options']
+env['TOOLS_LIBS']['numberOfEventsInBelleMdst'] = ['framework', 'boost_program_options', 'belle_legacy', 'b2bii']
+env['TOOLS_LIBS']['numberOfEventsInBelle2Mdst'] = ['framework', 'boost_program_options']
 
 Return('env')
