--- a/daq/slc/apps/nsmtemplated/tools/Makefile
+++ b/daq/slc/apps/nsmtemplated/tools/Makefile
@@ -10,7 +10,7 @@ LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 
 LIBS    += -lm -lpthread -ldl -lrt -lreadline
 LIBS    += -L$(LIBDIR) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_nsm \
-	-ldaq_slc_psql -ldaq_slc_runcontrol -ldaq_slc_apps_konnod
+	-ldaq_slc_psql -ldaq_slc_runcontrol -ldaq_slc_apps_templated
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
 ifneq ($(NOT_USE_PSQL),yes)
 LIBS    += -L$(LIBDIR) -ldaq_slc_psql -L$(PGSQL_LIB_PATH) -lpq
