--- a/tracking/modules/cdcToVXDExtrapolator/SConscript
+++ b/tracking/modules/cdcToVXDExtrapolator/SConscript
@@ -13,8 +13,9 @@ env['LIBS'] = [
     'pxd_dataobjects',
     'vxd_dataobjects',
     'tracking_trackFindingCDC',
+    'tracking_ckf',
     'tracking_dataobjects',
-    'tracking'
+    'tracking',
     ]
 Return('env')
 
