--- a/tracking/ckf/SConscript
+++ b/tracking/ckf/SConscript
@@ -8,15 +8,10 @@ env.Dictionary()['SUBLIB'] = True
 # Additional libraries
 env['LIBS'] = [
     'tracking',
-    'tracking_trackFindingCDC'
-#    'tracking_dataobjects',
-#    'geometry',
-#    'cdc', 'cdc_dataobjects',
-#    "mva", 'mva_dataobjects',
-#    'mdst_dataobjects',
-#    'framework',
-#    'genfit2',
-#    '$ROOT_LIBS',
+    'tracking_trackFindingCDC',
+    'framework',
+    'genfit2',
+    '$ROOT_LIBS',
     ]
 
 Return('env')
