--- a/daq/slc/data/config/slowcontrol.conf
+++ b/daq/slc/data/config/slowcontrol.conf
@@ -13,8 +13,8 @@ nsm.data.incpath   : ${BELLE2_LOCAL_DIR}/daq/slc/data/nsm
 # Database connection for DAQ controller
 #
 
-database.use       : true
-database.host      : disk
+database.use       : false
+database.host      : b2db.daqnet.kek.jp
 database.port      : 5432
 database.dbname    : b2slow
 database.user      : b2daq
@@ -24,7 +24,7 @@ database.password  : b2daq
 # DB object provider configuration
 #
 
-provider.host      : disk
+provider.host      : hltctl
 provider.port      : 20020
 
 #
