Added ability to save TClonesArray dbobjects in CalibrationAlgorithm. Added new test dbobjects and a module to show how to access them. Added an example script to run the module but it currently segfaults, probably an issue in the module somewhere.

--- a/calibration/SConscript
+++ b/calibration/SConscript
@@ -1,4 +1,4 @@
 Import('env')
-env['LIBS'] = ['framework', '$ROOT_LIBS', 'calibration_dataobjects', 'alignment_dataobjects']
+env['LIBS'] = ['framework', '$ROOT_LIBS', 'calibration_dataobjects', 'alignment_dataobjects', 'calibration_dbobjects']
 Return('env')
 
