Added basic subjob submission to PBS backend. Local and LSF are likely broken in this commit.

--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -5,14 +5,23 @@ HeartBeat = 3
 
 [PBS]
 Queue = short
-Release = /cvmfs/belle.cern.ch/sl6/releases/build-2016-09-09
-Tools = /cvmfs/belle.cern.ch/sl6/tools/setup_belle2
+MaxFilesPerSubJob = 5
 
 [LSF]
 Queue = s
-Release = /cvmfs/belle.cern.ch/sl6/releases/build-2016-09-09
-Tools = /sw/belle2/tools/setup_belle2
+MaxFilesPerSubJob = 5
 
 [TESTS]
 TestList = ["a","1",2,3,[4,"5"]]
 TestInt = 3
+
+[BASF2]
+Release = release-00-08-00
+Tools = /cvmfs/belle.cern.ch/sl6/tools/setup_belle2
+#"export VO_BELLE2_SW_DIR=/cvmfs/belle.cern.ch/sl6\n",
+SetupCmds = [
+    "CAF_TOOLS_LOCATION=%(Tools)s\n",
+    "CAF_RELEASE_LOCATION=%(Release)s\n",
+    "source $CAF_TOOLS_LOCATION\n",
+    "setuprel $CAF_RELEASE_LOCATION\n"
+    ]
