Moved non-caf examples to their own directory and created a generic script to setup all types of backends. Added job.backend_args dictionary that backends use to configure specific options for the backend about how they submit the job. Updated setup commands to not have to use newline characters. Added more example scripts.

--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -5,11 +5,11 @@ HeartBeat = 3
 
 [PBS]
 Queue = short
-MaxFilesPerSubJob = 5
+MaxFilesPerSubJob = -1
 
 [LSF]
 Queue = s
-MaxFilesPerSubJob = 5
+MaxFilesPerSubJob = -1
 
 [TESTS]
 TestList = ["a","1",2,3,[4,"5"]]
@@ -19,8 +19,8 @@ TestInt = 3
 Release = release-00-08-00
 Tools = /cvmfs/belle.cern.ch/sl6/tools/setup_belle2
 SetupCmds = [
-    "CAF_TOOLS_LOCATION=%(Tools)s\n",
-    "CAF_RELEASE_LOCATION=%(Release)s\n",
-    "source $CAF_TOOLS_LOCATION\n",
-    "setuprel $CAF_RELEASE_LOCATION\n"
+    "CAF_TOOLS_LOCATION=%(Tools)s",
+    "CAF_RELEASE_LOCATION=%(Release)s",
+    "source $CAF_TOOLS_LOCATION",
+    "setuprel $CAF_RELEASE_LOCATION"
     ]
